bk_ida/gobmkida/g1/edge_closing_backfill
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/edge_closing_backfill/src/engine/reading.c:4076:6: error: use of undeclared identifier 'dword_760CDC'
v5 = dword_760CDC[v4]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/edge_closing_backfill/src/obj/1/reading.o] Error 1
